--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- BOOTSTRAP -->
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.css"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <!-- FONT AWESOME -->
     <link
