--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="Assets/fontawesome-free-6.2.1-web/css/all.min.css"
     />
     <link rel="stylesheet" href="Assets/styles/style.css" />
+    <link rel="icon" href="./Assets/images/globe.png" />
     <title>OsEm</title>
   </head>
   <body>
@@ -46,7 +47,7 @@
               <a class="nav-link" href="#about">About me</a>
             </li>
             <li class="nav-item ms-auto">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#projects">Works</a>
             </li>
             <li class="nav-item ms-auto">
               <a href="#contact" class="nav-link">Contact me</a>
@@ -64,7 +65,7 @@
       >
         <div class="col-md-5 offset-md-1 p-0 text-md-end">
           <img
-            src="./Assets/images/profile.jpg"
+            src="./Assets/images/os_em.jpg"
             alt="Profile"
             class="rounded-circle"
             style="height: 260px"
@@ -377,7 +378,7 @@
     <!-- PROJECTS SECTION -->
     <div class="container-md my-5" id="projects">
       <div class="col-12">
-        <h3 class="fs-2 text-light text-center my-3">Projects I've done</h3>
+        <h3 class="fs-2 text-light text-center my-3">My Works</h3>
       </div>
 
       <div class="row row-cols-1 row-cols-md-3 g-4">
