--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             aut beatae nihil eius? Impedit officia quos nisi velit! Alias ullam
             laudantium neque sit.
           </p>
-          <a href="#" class="btn btn-primary">Contact Me</a>
+          <a href="#contact" class="btn btn-primary">Contact Me</a>
         </div>
       </div>
     </main>
