Added a new project in My Works sections.

--- a/index.html
+++ b/index.html
@@ -566,6 +566,37 @@
             </div>
           </div>
         </div>
+
+        <div class="col">
+          <div class="project-card card bg-black">
+            <a href="https://osem-22.github.io/currency_exchange/" target="_blank">
+              <img
+                src="./Assets/images/currency_converter.png"
+                class="card-img-top project-img"
+                alt="Currency Converter Website"
+              />
+            </a>
+
+            <div class="card-body text-white-50">
+              <h5 class="card-title fs-6">Curency Converter Website</h5>
+              <p class="card-text fs-7">HTML, CSS & JavaScript &#40;API, Object-oriented&#41;</p>
+              <div class="btn-group" role="group">
+                <a
+                  href="https://github.com/OsEm-22/currency_exchange"
+                  target="_blank"
+                  class="btn btn-sm btn-info"
+                  >Check Code</a
+                ><a
+                  href="https://osem-22.github.io/currency_exchange/"
+                  target="_blank"
+                  class="btn btn-sm btn-primary"
+                  >Check Site</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
     <!-- CONTACT SECTION -->
